--- a/src/app/ui/components/navbar/navbar.component.html
+++ b/src/app/ui/components/navbar/navbar.component.html
@@ -184,7 +184,7 @@
                 <!-- <p class="stock-status" [class.in-stock]="product.stock > 0">
                   {{ product.stock > 0 ? 'In stock' : 'Out of stock' }}
                 </p> -->
-                <p class="price">${{ product.price }} <span> / each</span></p>
+                <!-- <p class="price">${{ product.price }} <span> / each</span></p> -->
                 
               </div>
             </div>
