--- a/src/app/ui/components/product/product-grid/product-grid.component.scss
+++ b/src/app/ui/components/product/product-grid/product-grid.component.scss
@@ -37,8 +37,8 @@ $link-color: #0000ee;
   }
 
   .product-grid {
-    width: 1320px;
-    margin: 0 55px;
+    width: 1200px;
+    //margin: 0 55px;
     position: relative;
     
     .product-list {
