--- a/src/app/ui/components/user/user-sidebar/user-sidebar.component.html
+++ b/src/app/ui/components/user/user-sidebar/user-sidebar.component.html
@@ -20,10 +20,7 @@
       <button 
     class="close-btn"
     (click)="close()"
-    [attr.aria-label]="'Close menu'">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-      <path d="M18 6L6 18M6 6l12 12"/>
-    </svg>
+    [attr.aria-label]="'Close menu'">X
   </button>
     </div>
 
