--- a/src/app/ui/components/user/user-sidebar/user-sidebar.component.scss
+++ b/src/app/ui/components/user/user-sidebar/user-sidebar.component.scss
@@ -79,7 +79,7 @@ $text-secondary: #666666;
     color: white;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     position: relative;
 
     .user-info {
