--- a/src/app/ui/components/brand/brand-page/brand-page.component.html
+++ b/src/app/ui/components/brand/brand-page/brand-page.component.html
@@ -12,7 +12,7 @@
       </div>
   
       <!-- Brand Header Banner -->
-      <<div class="row mb-4" *ngIf="brand?.brandImage">
+      <div class="row mb-4" *ngIf="brand?.brandImage">
         <div class="col-12">
           <div class="brand-banner">
             <img [src]="brand?.brandImage?.url || defaultBrandImageUrl" 
