--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -551,8 +551,8 @@ $breakpoint-large: 1400px;
             justify-content: space-evenly;
 
             img {
-              width: 150px;
-              height: 150px;
+              width: 100px;
+              height: 100px;
               object-fit: contain;
               margin-right: 15px;
             }
@@ -582,7 +582,7 @@ $breakpoint-large: 1400px;
               }
 
               p {
-                font-size: 1rem;
+                //font-size: 1rem;
                 margin: 0 0 5px 0;
               }
 
